--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -45,8 +45,8 @@
         "direction":"Need Directions ?"
     },
     "weekly":{
-        "h2":"Best Weekly Offers In Each City",
-        "p":"Discover the best weekly offers in each city, curated just for you. Immerse yourself in a world of savings and indulge in unparalleled experiences."
+        "h2":"Top 10 Beautiful Destinations for Unforgettable Travels",
+        "p":"Every week, new opportunities and unexpected adventures await you! Each city reveals its hidden beauty, offering you new adventures. Feel like you are part of these wonders!"
     },
     "weeklyCard":{
         "h5":"Deal Includes:",
@@ -55,8 +55,8 @@
         "p3":"Daily Places Visit"
     },
     "visa":{
-        "h2":"Visa Support",
-        "p":"Experience stress-free travel with our expert visa support. We provide seamless assistance and comprehensive guidance, ensuring a smooth journey."
+        "h2":"We offer exclusive trips to these destinations!",
+        "p":"We organize comfortable and safe trips to Chinese cities just for you!"
     },
     "visaCard":{
         "h5":"Benefits of our Visa Support service:",
