--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -45,8 +45,8 @@
         "direction":"Нужны указания ?"
     },
     "weekly":{
-        "h2":"Лучшие Еженедельные Предложения В Каждом Городе",
-        "p":"Откройте для себя лучшие еженедельные предложения в каждом городе, специально подобранные для вас. Погрузитесь в мир скидок и наслаждайтесь непревзойденными впечатлениями."
+        "h2":"Топ 10 красивейших мест для незабываемых путешествий",
+        "p":"Каждую неделю вас ждут новые возможности и неожиданные приключения! Каждый город раскрывает свои скрытые красоты, даря вам новые приключения. Почувствуйте себя частью этих чудес!"
     },
     "weeklyCard":{
         "h5":"Включено в предложение:",
@@ -55,8 +55,8 @@
         "p3":"Посещение мест ежедневно"
     },
     "visa":{
-        "h2":"Лучшие Еженедельные Предложения В Каждом Городе",
-        "p":"Откройте для себя лучшие еженедельные предложения в каждом городе, специально подобранные для вас. Погрузитесь в мир скидок и наслаждайтесь непревзойденными впечатлениями."
+        "h2":"Мы предлагаем эксклюзивные путешествия в эти направления!",
+        "p":"Мы организуем удобные и безопасные путешествия по городам Китая специально для вас!"
     },
     "visaCard":{
         "h5":"Эта услуга включает в себя:",
