--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -65,17 +65,17 @@
         "p3":"Надежная помощь"
     },
     "country":{
-        "usa":"США",
-        "england":"Англия",
-        "canada":"Канада",
-        "europe":"Европа",
-        "kuala":"Куала Лумпур",
-        "japan":"Япония",
-        "oman":"Оман",
-        "saudia":"Саудовская Аравия",
-        "india":"Индия",
-        "china":"Китай",
-        "hong":"Гонг Конг"
+        "usa": "Сиань",
+    "england": "Чэнду",
+    "canada": "Чжанцзяцзе",
+    "europe": "Шэньчжэнь",
+    "kuala": "Куала-Лумпур",
+    "japan": "Хайнань",
+    "oman": "Макао",
+    "saudia": "Великая Китайская стена",
+    "india": "Пекин",
+    "china": "Пекин",
+    "hong": "Гонконг"
     },
     "checks":{
         "ins":"Регистраций",
