--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -98,7 +98,7 @@
         }
     },
     "visit":{
-        "h2":"Visit One Of Our Countries Now",
+        "h2":"Interesting facts about China",
         "p":"Discover the best offers in each city, curated just for you. Immerse yourself in a world of savings and indulge in unparalleled experiences."
     },
     "visitCard":{
@@ -130,7 +130,7 @@
         "phone":"Make a Phone Call",
         "email":"Contact Us via Email",
         "location":"Visit Our Offices",
-        "place":"15/25, Chilanzar - 9, Tashkent city"
+        "place":"Tashkent, Burijar street"
     },
     "form":{
         "h2":{
