--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -98,7 +98,7 @@
         }
     },
     "visit":{
-        "h2":"Посетите Одну Из Наших Стран Прямо Сейчас",
+        "h2":"Интересные факты о Китае",
         "p":"Откройте для себя лучшие предложения в каждом городе, специально подобранные для вас. Погрузитесь в мир скидок и наслаждайтесь непревзойденными впечатлениями."
     },
     "visitCard":{
@@ -130,7 +130,7 @@
         "phone":"Совершите телефонный звонок",
         "email":"Электронной почте",
         "location":"Посетите наши офисы",
-        "place":"15/25, Чиланзар - 9, город Ташкент"
+        "place":"Ташкент, улица Бурияра"
     },
     "form":{
         "h2":{
