--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -99,28 +99,32 @@
     },
     "visit":{
         "h2":"Интересные факты о Китае",
-        "p":"Откройте для себя лучшие предложения в каждом городе, специально подобранные для вас. Погрузитесь в мир скидок и наслаждайтесь непревзойденными впечатлениями."
+        "p":"Китай обладает уникальной культурой садоводства и историей. В этом разделе мы предоставим вам интересную информацию."
     },
     "visitCard":{
         "mil":"млн",
         "km":"км",
+		"fakt1": "Чайная культура",
+        "fakt2": "Поднебесная",
+        "fakt3": "Китайская кухня",
+        "fakt4": "Родина панд",
         "1":{
-            "subtitle":"Объединенные Арабские Эмираты",
-            "parag":"Дубай - город и эмират в Объединенных Арабских Эмиратах, известный своими роскошными магазинами, ультрасовременной архитектурой и оживленной ночной жизнью. Бурдж Халифа, башня высотой 830 м, владеет небоскребами города. У ее основания находится фонтан Дубая, струи и свет которого корректируются под музыку. На искусственных островах в море находится отель 'Атлантис, Пальм', с аквапарком и парком морских животных."
-        },
+			"subtitle": "Культура китайского чая",
+			"parag": "Китайская чайная культура формировалась на протяжении веков и является одной из древнейших традиций в мире. Питье чая стало неотъемлемой частью повседневной жизни китайцев, и эта культура отражает не только способ приготовления напитка, но и уважение к здоровью и духу."
+		  },
         "2":{
-            "subtitle":"Турция",
-            "parag":"Анталья - самый быстрорастущий город в Турции, и туристы со всего мира открывают для себя его фантастическое сочетание великолепных пляжей и традиционной турецкой культуры. Дети полюбят Пляжный парк, где есть Акваленд (мечта любителя горок) и Дельфинарий (дом для дельфинов, морских львов и белых китов). Обязательно исследуйте старый центр города и посмотрите на Ворота Адриана."
-        },
+			"subtitle": "Китай — Поднебесная",
+			"parag": "(На китайском языке Tiānxià — 天下) является концепцией, имеющей большое значение в китайской культуре и истории. Эта древняя фраза используется для описания Китая и связанного с ним мировоззрения. Понятие Поднебесной сформировалось в эпоху императорского Китая, где он рассматривался как место, управляемое Небом (Тянь), и это правление считалось распространяющимся на все на Земле."
+		},
         "3":{
-            "subtitle":"Египет",
-            "parag":"Шарм-эль-Шейх - центр туристической активности на полуострове Синаи, и здесь находятся лучшие места для дайвинга в мире. Особенно подводные чудеса национального парка Рас-Мухаммед, которые подняли город Шарм на совершенно новый уровень. В городе есть места для дайвинга и затонувшие корабли, которые привлекают продвинутых и любителей дайвинга со всего мира, чтобы открыть для себя уникальную морскую жизнь в глубинах Красного моря."
-        },
+			"subtitle": "Разнообразие китайской кухни",
+			"parag": "Китайская кухня знаменита во всем мире своим разнообразием блюд. Каждый регион известен своими уникальными блюдами, например, сычуаньская кухня известна остротой, а Пекин славится пекинской уткой."
+		},
 
         "4":{
-            "subtitle":"Турция",
-            "parag":"Стамбул - самый населенный город в Турции и его культурный, экономический и исторический центр. Расположенный в северо-западной части Турции, разделенный Босфором на европейскую и азиатскую стороны, который соединяет Мраморное море и Черное море. Этот город единственный в мире, который находится на двух континентах."
-        }
+			"subtitle": "Панды – дипломатический символ Китая",
+			"parag": "Гигантские панды играют важную роль в китайской дипломатии. Китай временно сдавал своих панд в аренду другим странам с целью укрепления дипломатических отношений. Это называется «дипломатия панд» и используется для укрепления связей Китая с международными партнерами. Арендованные панды находятся в различных зоопарках мира, большинство из них можно увидеть в США, Японии и странах Европы."
+		}
     },
     "reservation":{
         "h4":"Забронируйте предпочтительное предложение здесь",
@@ -148,8 +152,8 @@
         "nameex":"Например. Иван Иванов",
         "phoneex":"Например. +998 99 999 99 90",
         "guestsex":"Например. 3 или 4 или 5",
-        "destinationex":"Например. Анталия или Дубай",
-        "visaex":"Например. Анталия или Дубай"
+        "destinationex":"Например. Пекин",
+        "visaex":"Например. Чанду"
     },
     "footer":{
         "h2":"ИЩИТЕ, КУДА ПОЕХАТЬ?",
