--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -156,9 +156,9 @@
         "visaex":"Ex. China."
     },
     "footer":{
-        "h2":"ARE YOU LOOKING TO TRAVEL ?",
-        "p":"Make A Reservation By Clicking The Button"
-    },
+		"h2": "Tourland guarantees quality and reliable service.",
+		"p": "You deserve the best, Tourland is the best choice!"
+	},
     "best":{
         "h2":"Best Locations",
         "p":"Discover the best offers in each city, curated just for you. Immerse yourself in a world of savings and indulge in unparalleled experiences."
