--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -156,9 +156,9 @@
         "visaex":"Например. Чанду"
     },
     "footer":{
-        "h2":"ИЩИТЕ, КУДА ПОЕХАТЬ?",
-        "p":"Зарезервируйте, кликнув по кнопке"
-    },
+		"h2": "Tourland гарантирует качественное и надежное обслуживание.",
+		"p": "Вы достойны лучшего, Tourland — лучший выбор!"
+	},
     "best":{
         "h2":"Лучшие Места",
         "p":"Откройте для себя лучшие предложения в каждом городе, отобранные специально для вас. Погрузитесь в мир сэкономленных средств и наслаждайтесь неповторимыми впечатлениями."
