--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -35,7 +35,7 @@
     },
     "button":{
         "explore":"Узнать больше",
-        "go":"Перейти",
+        "go":"Свяжитесь с нами",
         "reservation":{
             "1":"Забронировать",
             "2":"Забронировать Сейчас"
@@ -166,5 +166,15 @@
     "formsent":{
         "success":"Успешно отправлено",
         "error":"Не удалось отправить. Пожалуйста, попробуйте еще раз"
-    }
+    },
+	
+		"modal": {
+		  "titel": "Пожалуйста, заполните эту форму.",
+		  "ism": "Ваше имя",
+		  "famila": "Ваша фамилия",
+		  "tel": "Ваш телефон",
+		  "telegram": "Ваш Telegram пользователь",
+		  "yubor": "Отправить"
+		}
 }
+	  
