--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -134,7 +134,7 @@
         "phone":"Make a Phone Call",
         "email":"Contact Us via Email",
         "location":"Visit Our Offices",
-        "place":"Tashkent, Burijar street"
+        "place":"Yakkasaray District, 1 Borijar Street."
     },
     "form":{
         "h2":{
