--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -134,7 +134,7 @@
         "phone":"Совершите телефонный звонок",
         "email":"Электронной почте",
         "location":"Посетите наши офисы",
-        "place":"Ташкент, улица Бурияра"
+        "place":"Яккасарайский район, улица Борияр, 1"
     },
     "form":{
         "h2":{
