--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -134,7 +134,7 @@
         "phone":"Telefon raqam",
         "email":"Bizga email orqali bog'laning",
         "location":"Ofisimizga tashrif buyuring",
-        "place":"Toshkent, Burijar ko'chasi"
+        "place":"Yakkasaroy tumani, Boʻrijar koʻchasi 1-uy"
     },
     "form":{
         "h2":{
