--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,14 +8,14 @@
     },
     "banner2":{
         "h2":"Take a Glimpse Into The Beautiful City Of:",
-        "h1":"Antaliya",
+        "h1":"Guanchjou ",
         "population":"Population:",
         "territory":"Territory:",
         "avgPrice":"AVG Price:"
     },
     "banner3":{
         "h2":"Take a Glimpse Into The Beautiful City Of:",
-        "h1":"Dubai",
+        "h1":"Nanjing",
         "population":"Population:",
         "territory":"Territory:",
         "avgPrice":"AVG Price:"
