--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,14 +8,14 @@
     },
     "banner2":{
         "h2":"Ощутите красоту Востока вместе с нами!",
-        "h1":"Анталия",
+        "h1":"Guanchjou",
         "population":"Население:",
         "territory":"Территория:",
         "avgPrice":"Средняя цена:"
     },
     "banner3":{
         "h2":"Ощутите красоту Востока вместе с нами!",
-        "h1":"Дубай",
+        "h1":"Нанкин",
         "population":"Население:",
         "territory":"Территория:",
         "avgPrice":"Средняя цена:"
