--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -8,14 +8,14 @@
     },
     "banner2":{
         "h2":"Sharqning go'zalliklarini biz bilan birgalikda his eting!:",
-        "h1":"Antalya",
+        "h1":"Guanchjou",
         "population":"Aholisi:",
         "territory":"Hududi:",
         "avgPrice":"O'rtacha narx:"
     },
     "banner3":{
         "h2":"Sharqning go'zalliklarini biz bilan birgalikda his eting!",
-        "h1":"Dubai",
+        "h1":"Nankin",
         "population":"Aholisi:",
         "territory":"Hududi:",
         "avgPrice":"O'rtacha narx:"
